web-infras/parser/tests/fixtures/babel/es2020/optional-chaining/class-contructor-call/output.txt
[SyntaxError]: Constructors in/after an Optional Chain are not allowed. (1,6)
1|new C?.b.d()
 |    ^
